# obsidian-tidy

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
obsidian-tidy-cli/: Cargo.toml
obsidian-tidy-cli/src/: lib.rs  logger_config.rs
obsidian-tidy-cli/src/command/: check.rs  completions.rs  init.rs  list_rules.rs  mod.rs  runner.rs
obsidian-tidy-config/: Cargo.toml
obsidian-tidy-config/src/: builder.rs  error.rs  lib.rs  loader.rs  saver.rs  template.rs
obsidian-tidy-core/: Cargo.toml
obsidian-tidy-core/src/: directories.rs  lib.rs  lint.rs  test_utils.rs
obsidian-tidy-core/src/lint/: boxed_error_lint.rs  lints.rs  mod.rs  shared_error_lint.rs  smart_pointer.rs  toggleable_lint.rs
obsidian-tidy-core/src/lint/lints/: mod.rs  serde.rs
obsidian-tidy-core/src/rule/: category.rs  content.rs  erased_rule.rs  mod.rs  rule_fabric.rs  rule_registry.rs  shared_error_rule.rs  smart_pointer.rs  toggleable_rule.rs  violation.rs
obsidian-tidy-core/src/rule/rule_fabric/: erased_rule_fabric.rs  get_fabric_from_rule_const_metadata.rs  get_fabric_from_static_rule.rs  mod.rs  rule_fabric_registry.rs
obsidian-tidy-core/src/rule/rules/: mod.rs  serde.rs
obsidian-tidy-core/src/test_utils/: error_rule.rs  mod.rs  test_rule.rs
obsidian-tidy-lints/: Cargo.toml
obsidian-tidy-lints/src/: lib.rs  lint_collection.rs
obsidian-tidy-logging/: Cargo.toml
obsidian-tidy-logging/src/: builder.rs  lib.rs  logger.rs
obsidian-tidy-macros/: Cargo.toml
obsidian-tidy-macros/src/: lib.rs
obsidian-tidy-macros/src/rule_const_metadata/: category.rs  kebab_case.rs  mod.rs  rule_description.rs  rule_name.rs
obsidian-tidy-macros/src/rule_const_metadata/attributes/: category.rs  mod.rs  rule_description.rs  rule_name.rs
obsidian-tidy-macros/src/rule_const_metadata/chain_of_responsibility/: check_empty_string.rs  check_kebab_case.rs  check_len_string.rs  check_only_ascii.rs  handlers.rs  mod.rs
obsidian-tidy-macros/src/test_utils/: test_handler.rs
obsidian-tidy-rules/: Cargo.toml
obsidian-tidy-rules/src/: lib.rs  rules.rs
obsidian-tidy-rules/src/content/: empty_content.rs  mod.rs
obsidian-tidy-rules/src/test_utils/: mod.rs
obsidian-tidy-rules/src/test_utils/mock_vault/: builder.rs  mod.rs
src/: args.rs  cli.rs  main.rs
src/check/: mod.rs
src/config/: builder.rs  error.rs  loader.rs  mod.rs  template.rs
