[package]
name = "obsidian-tidy"
version = "0.1.0"
edition = "2024"
authors = ["CryptoGladi <dam.almaev@gmail.com> "]
description = "Blazingly fast Obsidian vault linter"
repository = "https://github.com/CryptoGladi/obsidian-tidy"
documentation = "https://docs.rs/obsidian-tidy/latest/obsidian_tidy"
license = "MIT"
keywords = ["obsidian", "vault", "linter", "tidy", "knowledge-graph", "graph"]
categories = ["parser-implementations", "data-structures"]

[workspace]
members = ["obsidian-tidy-core", "obsidian-tidy-logging"]

[workspace.dependencies]
tracing = "0.1"
anyhow = "1"
obsidian-tidy-logging = { path = "./obsidian-tidy-logging" }
obsidian-tidy-core = { path = "./obsidian-tidy-core" }
obsidian-parser = { version = "0.9", features = ["petgraph", "rayon"] }

[dependencies]
tracing.workspace = true
obsidian-tidy-logging.workspace = true
obsidian-tidy-core.workspace = true
clap = { version = "4.5", features = ["env", "derive", "unicode", "string"] }
toml = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
