[package]
name = "obsidian-tidy"
version = "0.1.0"
edition = "2024"
authors = ["CryptoGladi <dam.almaev@gmail.com> "]
description = "Blazingly fast Obsidian vault linter"
repository = "https://github.com/CryptoGladi/obsidian-tidy"
documentation = "https://docs.rs/obsidian-tidy/latest/obsidian_tidy"
license = "MIT"
keywords = ["obsidian", "vault", "linter", "tidy", "knowledge-graph", "graph"]
categories = ["parser-implementations", "data-structures"]

[workspace]
members = ["obsidian-tidy-core", "obsidian-tidy-lints", "obsidian-tidy-logging"]

[workspace.dependencies]
obsidian-tidy-logging = { path = "./obsidian-tidy-logging" }
obsidian-tidy-core = { path = "./obsidian-tidy-core" }
obsidian-tidy-lints = { path = "./obsidian-tidy-lints" }
tracing = "0.1"
anyhow = "1"
obsidian-parser = { version = "0.9", features = ["petgraph", "rayon"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.9"

[dependencies]
obsidian-tidy-logging.workspace = true
obsidian-tidy-core.workspace = true
obsidian-tidy-lints.workspace = true
tracing.workspace = true
clap = { version = "4.5", features = ["env", "derive", "unicode", "string"] }
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
toml.workspace = true
better-panic = "0.3"

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1
opt-level = 3
