[package]
name = "obsidian-tidy"
version = "0.1.0"
edition = "2024"
authors = ["CryptoGladi <dam.almaev@gmail.com> "]
description = "Blazingly fast Obsidian vault linter"
repository = "https://github.com/CryptoGladi/obsidian-tidy"
documentation = "https://docs.rs/obsidian-tidy/latest/obsidian_tidy"
license = "MIT"
keywords = ["obsidian", "vault", "linter", "tidy", "knowledge-graph", "graph"]
categories = ["parser-implementations", "data-structures"]

[workspace]
members = [
  "obsidian-tidy-core",
  "obsidian-tidy-rules",
  "obsidian-tidy-logging",
  "obsidian-tidy-cli",
  "obsidian-tidy-config",
]

[workspace.dependencies]
obsidian-tidy-logging = { path = "./obsidian-tidy-logging" }
obsidian-tidy-core = { path = "./obsidian-tidy-core" }
obsidian-tidy-rules = { path = "./obsidian-tidy-rules" }
obsidian-tidy-config = { path = "./obsidian-tidy-config" }
obsidian-tidy-cli = { path = "./obsidian-tidy-cli" }
tracing = "0.1"
anyhow = "1"
obsidian-parser = { version = "0.9", features = ["petgraph", "rayon"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.9"
tracing-test = "0.2"
itertools = "0.14"
clap = { version = "4.5", features = ["env", "derive", "unicode", "string"] }
rayon = "1.11"
tracing-subscriber = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[lints]
workspace = true

[dependencies]
obsidian-tidy-logging.workspace = true
obsidian-tidy-core.workspace = true
obsidian-tidy-cli.workspace = true
tracing.workspace = true
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
color-eyre = "0.6"
