[package]
name = "obsidian-tidy-cli"
version = "0.0.0"
edition = "2024"

[dependencies]
obsidian-tidy-core.workspace = true
obsidian-tidy-rules.workspace = true
obsidian-tidy-config.workspace = true
obsidian-parser.workspace = true
tracing.workspace = true
itertools.workspace = true
rayon.workspace = true
clap.workspace = true
thiserror.workspace = true
owo-colors = "4.2"
miette = "7.6"
