[package]
name = "obsidian-tidy-rules"
version = "0.0.0"
edition = "2024"

[dependencies]
obsidian-tidy-core.workspace = true
obsidian-parser.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tracing-test.workspace = true
rand = "0.10"
tempfile = "3.25"
lipsum = "0.9.1"
